--- a/src/Razensoft.Functional/package.json
+++ b/src/Razensoft.Functional/package.json
@@ -1,9 +1,8 @@
 {
   "name": "com.razensoft.functional",
   "displayName": "Razensoft.Functional",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "unity": "2018.4",
-  "description": "Functional extensions for C# and UniTask",
+  "description": "Functional extensions for Unity",
   "license": "MIT"
 }
-
